--- a/SDKAngularSample/package.json
+++ b/SDKAngularSample/package.json
@@ -6,7 +6,7 @@
   "angular-cli": {},
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --port 4202",
     "test": "ng test",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e": "protractor",
@@ -55,7 +55,7 @@
     "rxjs-tslint": "^0.1.7",
     "ts-node": "1.2.1",
     "tslint": "^5.17.0",
-    "typescript": "^3.4.5",
+    "typescript": "3.5.3",
     "webpack": "^4.34.0"
   }
 }
