--- a/SDKAngularSample/package.json
+++ b/SDKAngularSample/package.json
@@ -6,7 +6,7 @@
   "angular-cli": {},
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --port 4202",
+    "start": "ng serve --ssl --ssl-key localhost.key  --ssl-cert localhost.crt --port 4202",
     "test": "ng test",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e": "protractor",
