--- a/SDKAngularSample/package.json
+++ b/SDKAngularSample/package.json
@@ -29,7 +29,7 @@
     "core-js": "^3.1.3",
     "diff": "^3.5.0",
     "moment": "^2.24.0",
-    "rainbow-web-sdk": "^1.40.0",
+    "rainbow-web-sdk": "1.69.0",
     "rxjs": "^6.5.2",
     "ts-helpers": "^1.1.1",
     "tslib": "^1.9.0",
